[gd_scene load_steps=4 format=3 uid="uid://dmaux57ok18rc"]

[ext_resource type="Texture2D" uid="uid://qdgm4ogfxxuo" path="res://Sprites/itens/mushroom.png" id="1_tlgkm"]
[ext_resource type="Script" uid="uid://bycnkiepcpp20" path="res://Scripts/Hud/lifes.gd" id="1_wde76"]
[ext_resource type="Texture2D" uid="uid://ddu8dqu324din" path="res://Sprites/itens/death_mushroom.png" id="3_4hbwr"]

[node name="lifes" type="Node2D"]
script = ExtResource("1_wde76")

[node name="life1" type="Sprite2D" parent="."]
texture = ExtResource("1_tlgkm")

[node name="life2" type="Sprite2D" parent="."]
position = Vector2(18, 0)
texture = ExtResource("1_tlgkm")

[node name="life3" type="Sprite2D" parent="."]
position = Vector2(36, 0)
texture = ExtResource("1_tlgkm")

[node name="dead_life1" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_4hbwr")

[node name="dead_life2" type="Sprite2D" parent="."]
visible = false
position = Vector2(18, 0)
texture = ExtResource("3_4hbwr")

[node name="dead_life3" type="Sprite2D" parent="."]
visible = false
position = Vector2(36, 0)
texture = ExtResource("3_4hbwr")
